<resources>
    <string name="app_name">doan_mobile</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="food_and_drinks">Food And Drinks</string>
    <string name="userName">Tên đăng nhập</string>
    <string name="pass">Mật Khẩu</string>
    <string name="newpass">Mật Khẩu Mới</string>
    <string name="signup">Đăng Ký</string>
    <string name="login">Đăng Nhập</string>
    <string name="createAccount">Create Account</string>
    <string name="forget">Quên mật Khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="usersName">Tên đăng ký</string>
    <string name="email">Email</string>
    <string name="soPhone">Nhập số điện thoại</string>
    <string name="changePass">Đổi mật khẩu</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="no">Thoát</string>
    <string name="yes">Lưu</string>
    <string name="baomat">Bảo mật</string>
    <string name="coffee">Coffee</string>
    <string name="nameCoffee">Coffee Latte</string>
    <string name="Customize">Customize</string>
    <string name="variant">Variant</string>
    <string name="sugar">Sugar</string>
    <string name="mike">Mike</string>
    <string name="size">Size</string>
    <string name="ice">Ice</string>
    <string name="hot">Hot</string>
    <string name="normal">Normal</string>
    <string name="less">Less</string>
    <string name="regular">Regular</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="order">Order</string>
    <string name="search">Tìm kiếm</string>
    <string name="photo_description">photo_description</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="ADDTOCART">Add to cart</string>
    <string name="delete">Delete</string>
    <string name="checkout">Thanh toán</string>


</resources>