<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:orientation="horizontal">



    <ImageView
        android:id="@+id/imgcoffee"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/foodandrink"
        />
    <View
        android:id="@+id/coffee"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_below="@id/imgcoffee"
        />
    <TextView
        android:id="@+id/coffeeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coffee"
        android:layout_below="@id/imgcoffee"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/nameCoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameCoffee"
        android:layout_below="@id/coffeeTitle"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <View
        android:id="@+id/Customize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coffee"
        android:layout_marginTop="1dp" />

    <TextView
        android:id="@+id/customize1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coffee"
        android:text="@string/Customize"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/variant"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/customize1"
        android:text="@string/variant"
        android:paddingTop="13dp"
        android:paddingLeft="20dp"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </RadioGroup>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/customize1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="129dp"
        android:text="@string/ice" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/customize1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="28dp"
        android:text="@string/hot" />

    <TextView
        android:id="@+id/sugar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/variant"
        android:text="@string/sugar"
        android:paddingTop="13dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <RadioButton
        android:id="@+id/normal"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/variant"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="98dp"
        android:text="@string/normal" />

    <RadioButton
        android:id="@+id/less"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/variant"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/less"
        />
    <TextView
        android:id="@+id/mike"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/sugar"
        android:text="@string/mike"
        android:paddingTop="13dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <RadioButton
        android:id="@+id/normalMike"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/normal"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="98dp"
        android:text="@string/normal" />

    <RadioButton
        android:id="@+id/lessMike"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/less"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/less"
        />
    <TextView
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/mike"
        android:text="@string/size"
        android:paddingTop="13dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <RadioButton
        android:id="@+id/regular"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/normalMike"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="199dp"
        android:text="@string/regular" />

    <RadioButton
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/lessMike"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="93dp"
        android:text="@string/medium" />

    <RadioButton
        android:id="@+id/large"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/lessMike"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:text="@string/large" />


</RelativeLayout>