<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListProduct.CoffeeLattee">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--c1_coffee.xml-->
        <ImageView
            android:id="@+id/imgcoffee_c2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/c2" />
        <View
            android:id="@+id/coffee_c2"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_below="@id/imgcoffee_c2" />
        <TextView
            android:id="@+id/coffeeTitle_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:textColor="@color/nau"
            android:layout_below="@id/imgcoffee_c2"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrow_next"
            android:layout_below="@+id/coffeeTitle_c2"
            android:layout_marginTop="-20dp"
            android:layout_marginLeft="360dp" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/arrow_back"
            android:layout_below="@+id/coffeeTitle_c2"
            android:layout_marginTop="-20dp"
            android:layout_marginLeft="320dp" />

        <TextView
            android:id="@+id/nameCoffee_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameCoffee"
            android:layout_below="@id/coffeeTitle_c2"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <View
            android:id="@+id/Customize_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee"
            android:layout_marginTop="1dp" />

        <TextView
            android:id="@+id/customize1_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee_c2"
            android:text="@string/Customize"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/variant_c2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/customize1_c2"
            android:text="@string/variant"
            android:paddingTop="13dp"
            android:paddingLeft="20dp"
            android:textSize="15sp"
            android:textStyle="bold" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </RadioGroup>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/customize1_c2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="129dp"
            android:text="@string/ice" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/customize1_c2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="28dp"
            android:text="@string/hot" />

        <TextView
            android:id="@+id/sugar_c2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/variant_c2"
            android:text="@string/sugar"
            android:paddingTop="13dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/normal_c2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/variant_c2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="98dp"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/less_c2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/variant_c2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/less" />
        <TextView
            android:id="@+id/mike_c2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/sugar_c2"
            android:text="@string/mike"
            android:paddingTop="13dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/normalMike_c2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/normal_c2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="98dp"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/lessMike_c2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/less_c2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/less" />
        <TextView
            android:id="@+id/size_c2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/mike_c2"
            android:text="@string/size"
            android:paddingTop="13dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/regular_c2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/normalMike_c2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="199dp"
            android:text="@string/regular" />

        <RadioButton
            android:id="@+id/medium_c2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/lessMike_c2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="93dp"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/large_c2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/lessMike_c2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:text="@string/large" />
        <Button
            android:id="@+id/btnCheckout_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:layout_below="@id/size_c2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</ScrollView>
