<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Coffee">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.appcompat.widget.SearchView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/search_bar"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/foodandrink">
            </ImageView>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/title_coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameCoffee"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp">
            </TextView>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/Customize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_coffee">
            <FrameLayout
                android:id="@+id/Variant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/variant"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp">
                </TextView>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ice"
                        android:backgroundTint="@color/cam">
                    </Button>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="-50dp"
                        android:text="@string/hot"
                        android:backgroundTint="@color/cam">
                    </Button>
                </RadioGroup>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/Sugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sugar"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp">
                </TextView>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"
                        android:backgroundTint="@color/cam">
                    </Button>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="-50dp"
                        android:text="@string/less"
                        android:backgroundTint="@color/cam">
                    </Button>
                </RadioGroup>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/Mike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginStart="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mike"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp">
                </TextView>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"
                        android:backgroundTint="@color/cam">
                    </Button>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="-50dp"
                        android:text="@string/less"
                        android:backgroundTint="@color/cam">
                    </Button>
                </RadioGroup>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/Size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:layout_marginStart="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp">
                </TextView>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium"
                        android:backgroundTint="@color/cam">
                    </Button>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="-50dp"
                        android:text="@string/large"
                        android:backgroundTint="@color/cam">
                    </Button>
                </RadioGroup>
            </FrameLayout>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Customize">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:backgroundTint="@color/red"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp">

            </Button>
        </FrameLayout>
    </RelativeLayout>


</ScrollView>