<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Baomat">



    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="130dp"
        app:cardBackgroundColor="@color/white"
        >
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/foodandrink"
            android:contentDescription="@string/food_and_drinks" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/foodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="160dp"
        android:text="@string/food_and_drinks"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/baomat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baomat"
        android:textColor="@color/black"
        android:layout_below="@+id/foodTitle"
        android:layout_marginStart="30dp"
        android:textSize="15sp"
        android:textStyle="bold"

        />

    <androidx.cardview.widget.CardView
        android:id="@+id/soPhones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/foodTitle"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/soPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/soPhone"
            android:inputType="phone"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/soPhones"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/changePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/changePassWord"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/changePass"
            android:inputType="textPassword"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nhaplaipass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/changePass"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/nhaplaiPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/nhaplaimatkhau"
            android:inputType="textPassword"
            />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nhaplaipass"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/gray"
        android:gravity="center_horizontal"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nhaplaipass"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/gray"
        android:gravity="center_horizontal"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>